--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Commit files
         run: |
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config user.name "github-actions[bot]"
+          git config user.email "ernestdodz@gmail.com"
+          git config user.name "ernestdodz"
           git add .
           git commit -m "Update ids.txt" -a
       - name: Push changes
